deployment/minikube/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: image-service
  labels:
    app: image-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: image-service
  template:
    metadata:
      labels:
        app: image-service
    spec:
      containers:
        - name: image-service
          securityContext:
            privileged: true
            capabilities:
              add:
                - SYS_ADMIN
          image: image-service:1.0
          imagePullPolicy: Never
          command: ["entrypoint.sh"]
          args: ["-token" ,"fbsxIBmBRNff6d97jwnFfWADhFWCs3fA", "-upload_limit", "4950996300" ,"/opt/media"]
          resources:
            requests:
              memory: "512Mi"
              cpu: "100m"
            limits:
              memory: "1024Mi"
              cpu: "250m"
          ports:
            - name: http-port
              containerPort: 25478
          livenessProbe:
            httpGet:
              path: /files/status.png?token=fbsxIBmBRNff6d97jwnFfWADhFWCs3fA
              port: http-port
            initialDelaySeconds: 60
            periodSeconds: 3
          readinessProbe:
            httpGet:
              path: /files/status.png?token=fbsxIBmBRNff6d97jwnFfWADhFWCs3fA
              port: http-port
            initialDelaySeconds: 60
            periodSeconds: 3
