deployment/minikube/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: image-service-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /files/$2?token=fbsxIBmBRNff6d97jwnFfWADhFWCs3fA
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
    - host: api.vid.app
      http:
        paths:
          - path: /api/upload/image/files(/|$)(.*)
            pathType: Exact
            backend:
              service:
                name: image-service
                port:
                  number: 10260
